--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-     <img src="mtce_logo.png" alt="elogo.jpeg" width="50">
+     
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Check Your Election Details</title>
-    <img src="mtce_logo.png" alt="elogo.jpeg" width="150">
+  <link rel="icon" type="image/png" href="elogo.jpeg">
     <style>
         body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; }
         input, button { padding: 10px; margin: 5px; width: 250px; }
