--- a/index.html
+++ b/index.html
@@ -5,10 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Check Your Election Details</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; }
-        input, button { padding: 10px; margin: 5px; width: 250px; }
-        button { background-color: blue; color: white; border: none; cursor: pointer; }
-        #result { margin-top: 20px; font-weight: bold; }
+        body { 
+             font-family: Arial, sans-serif; 
+             text-align: center; margin-top: 50px; 
+         background-image: url('background.jpg'); /* Change to your file name */
+        background-size: cover; /* Cover the whole screen */
+        background-position: center; /* Center the image */
+        background-attachment: fixed; /* Keep background fixed while scrolling */
+                
+        } input, 
+         
+         button { 
+              padding: 10px; 
+              margin: 5px; 
+              width: 250px; 
+               }
+        button { 
+             background-color: blue; 
+             color: white; border: none; 
+             cursor: pointer; 
+               }
+        #result { 
+             margin-top: 20px; 
+             font-weight: bold; 
+               }
     </style>
 </head>
 <body>
