--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
      <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MTCE ELECTIONS 2025: Check Your Election Details</title>
+    <title>Check Your Election Details</title>
     <style>
         body { 
              font-family: Arial, sans-serif; 
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-    <h2>Check Your Election Register Details</h2>
+    <h2>MTCE ELECTIONS 2025: Check Your Election Register Details</h2>
     <input type="text" id="idNumber" placeholder="Enter ID Number"><br>
     <input type="text" id="lastName" placeholder="Enter Last Name"><br>
     <button onclick="checkDetails()">Check Details</button>
