--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-    <h2>MTCE ELECTIONS REGISTER 2025:  Check Your Election Details</h2>
+    <h2>MTCE ELECTIONS REGISTER 2025, Check Your Election Details</h2>
     <input type="text" id="idNumber" placeholder="Enter Index Number"><br>
     <input type="text" id="lastName" placeholder="Enter Last Name"><br>
     <button onclick="checkDetails()">Check Details</button>
