--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                }
         button { 
              background-color: blue; 
-             color: white; border: none; 
+              border: none; 
              cursor: pointer; 
                }
         #result { 
