--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
         body { 
              font-family: Arial, sans-serif; 
              text-align: center; margin-top: 50px; 
-         background-image: url(background-image: url('https://raw.githubusercontent.com/denchdench/mtce/main/background.jpeg');/* Change to your file name */
-        background-size: cover; /* Cover the whole screen */
-        background-position: center; /* Center the image */
-        background-attachment: fixed; /* Keep background fixed while scrolling */
+             background-image: url(background-image: url('https://raw.githubusercontent.com/denchdench/mtce/main/background.jpeg');/* Change to your file name */
+             background-size: cover; /* Cover the whole screen */
+             background-position: center; /* Center the image */
+             background-attachment: fixed; /* Keep background fixed while scrolling */
                 
         } input, 
          
          button { 
               padding: 10px; 
-              margin: 5px; 
+              color: white; margin: 5px; 
               width: 250px; 
                }
         button { 
