--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body { 
              font-family: Arial, sans-serif; 
              text-align: center; margin-top: 50px; 
-             background-image:  url('Main-Entrace.jpg');/* Change to your file name */
+             background-image:  url('Main-Entrance.jpg');/* Change to your file name */
              background-size: cover; /* Cover the whole screen */
              background-position: center; /* Center the image */
              background-attachment: fixed; /* Keep background fixed while scrolling */
