--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 </head>
 <body>
     <h2>MTCE ELECTIONS REGISTER 2025, Check Your Election Details</h2>
-    <input type="text" id="idNumber" placeholder="Enter Index Number"><br>
-    <input type="text" id="lastName" placeholder="Enter Last Name"><br>
+    <input type="text" id="idNumber" placeholder="Enter Index Number" style="color: gray;"><br>
+    <input type="text" id="lastName" placeholder="Enter Last Name" style="color: gray;"><br>
     <button onclick="checkDetails()">Check Details</button>
     <p id="result"></p>
     
