--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
              margin-top: 20px; 
              font-weight: bold; 
                }
+
+                setTimeout(function() {
+    location.reload(); // Reloads the page after 5 seconds
+  }, 5000); // 10000 milliseconds = 10 seconds
     </style>
 </head>
 <body>
