--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             }
 
             // Refresh the page 10 seconds after displaying results
+            console.log("Page will refresh in 5 seconds...");
             setTimeout(function() {
                 location.reload();
             }, 10000);
