--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         let students = [];
 
         // Fetch the JSON file and store the data
-        fetch("election_register_25.json")
+        fetch("election_details.json")
             .then(response => response.json())
             .then(data => students = data)
             .catch(error => console.error("Your data is not loaded:", error));
