--- a/index.html
+++ b/index.html
@@ -76,5 +76,9 @@
             }, 10000);
         }
     </script>
+
+<footer class="footer">
+    Designed by S.A.K. INITIATIVES 2025
+</footer>
 </body>
 </html>
