--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
         input::placeholder {
             color: gray;
         }
+
+        .footer {
+    text-align: center;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent black */
+    color: white;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+}
+        
     </style>
 </head>
 <body>
