--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
     <input type="text" id="lastName" placeholder="Enter Last Name" style="color: black;"><br>
     <button onclick="checkDetails()">Check Details</button>
     <p id="result"></p>
+
+    <p><H3>PLEASE REPORT AT THE ICT LAB IF YOU HAVE ANY PROBLEMS WITH YOUR DETAILS<H3></p>
     
     <script>
         let students = [];
