--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <button onclick="checkDetails()">Check Details</button>
     <p id="result"></p>
 
-    <p><H3>PLEASE REPORT AT THE ICT LAB IF YOU HAVE ANY PROBLEMS WITH YOUR DETAILS<H3></p>
+    <H3>PLEASE REPORT AT THE ICT LAB IF YOU HAVE ANY PROBLEMS WITH YOUR DETAILS<H3>
     
     <script>
         let students = [];
