--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     color: white;
     width: 100%;
     margin-top: auto; /* Pushes footer to bottom */
-    position: fixed; /* Ensures it's part of the flow */
+    position: relative; /* Ensures it's part of the flow */
 }
         
     </style>
