--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Check Your Election Details</title>
     <style>
-        /* Ensure the page takes up the full height */
+        /* Ensure full height for proper flexbox alignment */
         html, body {
             height: 100%;
             margin: 0;
@@ -15,22 +15,22 @@
 
         /* Background and general styling */
         body {
-            flex: 1;
-            text-align: center;
             font-family: Arial, sans-serif;
+            text-align: center;
             background-image: url('Main-Entrance.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
+            flex: 1;
         }
 
-        /* Wrapper to push the footer down */
+        /* Main container to push footer down */
         .container {
-            flex: 1; /* Pushes the footer down */
+            flex: 1; /* Pushes the footer to the bottom */
             display: flex;
             flex-direction: column;
-            align-items: center;
             justify-content: center;
+            align-items: center;
             padding: 20px;
         }
 
@@ -63,7 +63,9 @@
             background-color: rgba(0, 0, 0, 0.7);
             color: white;
             width: 100%;
-            position: relative;
+            position: absolute;
+            bottom: 0;
+            left: 0;
         }
     </style>
 </head>
@@ -122,4 +124,3 @@
     </script>
 </body>
 </html>
-
